--- a/docs/birds-eye.ipynb
+++ b/docs/birds-eye.ipynb
@@ -13,17 +13,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You typically want to know where your files & datasets came from.\n",
+    "You typically want to know where files & datasets came from.\n",
     "\n",
-    "In this guide, you'll learn how to backtrace file transformations through notebooks, pipelines & app uploads.\n",
+    "Here, you'll backtrace file transformations through notebooks, pipelines & app uploads in a complex research project (based on [Schmidt22](https://pubmed.ncbi.nlm.nih.gov/35113687/)).\n",
     "\n",
-    ":::{dropdown} But, should I really care about data lineage?\n",
+    ":::{dropdown} Can you give more concrete reasons why I should care about data lineage?\n",
     "\n",
-    "Capturing and documenting the origin and flow of biological data throughout its lifecycle is important as it enables the traceability and reliability of biological data & insights, verify experimental outcomes, meet stringent regulatory standards, and foster the reproducibility of scientific discoveries.\n",
+    "It allows to trace and rely on biological insights, verify experimental outcomes, meet stringent regulatory standards, and generally increase the reproducibility of scientific discoveries.\n",
     "\n",
     "While tracking data lineage is easier when it's governed by deterministic pipelines, it becomes hard when its governed by interactive human-driven analyses.\n",
     "\n",
-    "This notebook walks through how LaminDB helps with both by enabling to `ln.track()` data flow through notebooks & teams of analysts.\n",
+    "This is where LaminDB fills a gap in the tools space.\n",
     "\n",
     ":::"
    ]
@@ -495,6 +495,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data lineage graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To summarize, let's re-render the data lineage graph:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.view_lineage()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -507,11 +530,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Under-the-hood we already tracked pipeline and notebook runs through the global context: `context.run`.\n",
+    "Under-the-hood we already tracked pipeline and notebook runs through {class}`~docs:lamindb.dev.run_context`.\n",
     "\n",
     "You can see this most easily by looking at the `File.run` attribute (in addition to `File.transform`).\n",
     "\n",
-    "{class}`~lamindb.File` objects are the `inputs` and `outputs` of such runs. "
+    "{class}`~lamindb.File` objects are the inputs and outputs of such runs. "
    ]
   },
   {
@@ -521,7 +544,8 @@
    "source": [
     "Sometimes, we don't want to create a global run context but manually pass a run when creating a file:\n",
     "```\n",
-    "ln.File(filepath, run=ln.Run(transform=transform))\n",
+    "run = ln.Run(transform=transform)\n",
+    "ln.File(filepath, run=run)\n",
     "```"
    ]
   },
@@ -530,10 +554,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When accessing files (_staging_, _loading_, etc.) are two things:\n",
+    "When accessing a file via `stage()`, `load()` or `backed()`, two things happen:\n",
     "\n",
-    "1. The current run gets added to `file.input_of` of the file that is accessed from the transform\n",
-    "2. The transform of that file got linked as a parent to the current transform"
+    "1. The current run gets added to `file.input_of`\n",
+    "2. The transform of that file gets added as a parent of the current transform"
    ]
   },
   {
@@ -541,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While run outputs are _automatically_ tracked as data sources once you call `ln.track()`, you can then still switch off auto-tracking of run inputs if you set `ln.settings.track_run_inputs = False`."
+    "While run outputs are _automatically_ tracked as data sources once you call `ln.track()`, you can then still switch off auto-tracking of run inputs if you set `ln.settings.track_run_inputs = False`: {doc}`docs:faq/track-run-inputs`"
    ]
   },
   {
