📝 Improve title & intro for analysis-flow

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -5,7 +5,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Track data using bio-registries & provenance"
+    "# Analyst's view"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we'll take an analysts-centric view of typical file transformations.\n",
+    "\n",
+    "If exploring more generally, read this first: {doc}`/birds-eye`."
    ]
   },
   {
