🚑️ Added --force for instance deletion

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -540,7 +540,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin delete analysis-usecase\n",
+    "!lamin delete --force analysis-usecase\n",
     "!rm -r ./analysis-usecase"
    ]
   }
