--- a/docs/birds-eye.ipynb
+++ b/docs/birds-eye.ipynb
@@ -730,7 +730,7 @@
    "outputs": [],
    "source": [
     "!lamin login testuser1\n",
-    "!lamin delete mydata\n",
+    "!lamin delete --force mydata\n",
     "!rm -r ./mydata"
    ]
   }
