--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -307,7 +307,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin delete test-bulkrna\n",
+    "!lamin delete --force test-bulkrna\n",
     "!rm -r test-bulkrna"
    ]
   }
