--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -949,7 +949,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin delete celltypist\n",
+    "!lamin delete --force celltypist\n",
     "!rm -r ./celltypist"
    ]
   }
