--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -846,7 +846,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin delete enrichr\n",
+    "!lamin delete --force enrichr\n",
     "!rm -r ./enrichr"
    ]
   }
