--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -310,7 +310,8 @@
    },
    "outputs": [],
    "source": [
-    "!lamin delete test-multimodal"
+    "!lamin delete --force test-multimodal\n",
+    "!rm -r test-multimodal"
    ]
   }
  ],
