--- a/docs/flow.ipynb
+++ b/docs/flow.ipynb
@@ -427,7 +427,7 @@
    "outputs": [],
    "source": [
     "# clean up test instance\n",
-    "!lamin delete test-flow\n",
+    "!lamin delete --force test-flow\n",
     "!rm -r test-flow"
    ]
   }
