--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "# clean up test instance\n",
-    "!lamin delete test-spatial\n",
+    "!lamin delete --force test-spatial\n",
     "!rm -r test-flow"
    ]
   }
