♻️ Refactor birds-eye

--- a/docs/birds-eye.ipynb
+++ b/docs/birds-eye.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/birds-eye.ipynb)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -13,13 +20,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You typically want to know where files & datasets came from.\n",
+    "Here, you'll backtrace file transformations through notebooks, pipelines & app uploads in a research project based on [Schmidt22](https://pubmed.ncbi.nlm.nih.gov/35113687/).\n",
     "\n",
-    "Here, you'll backtrace file transformations through notebooks, pipelines & app uploads in a complex research project (based on [Schmidt22](https://pubmed.ncbi.nlm.nih.gov/35113687/)).\n",
+    "It's a mix of a guide & a demo usecase.\n",
     "\n",
-    ":::{dropdown} Can you give more concrete reasons why I should care about data lineage?\n",
+    ":::{dropdown} Why should I care about data lineage?\n",
     "\n",
-    "It allows to trace and rely on biological insights, verify experimental outcomes, meet stringent regulatory standards, and generally increase the reproducibility of scientific discoveries.\n",
+    "Data lineage enables to trace the origin of biological insights, verify experimental outcomes, meet regulatory standards, and increase the reproducibility & reliability research.\n",
     "\n",
     "While tracking data lineage is easier when it's governed by deterministic pipelines, it becomes hard when its governed by interactive human-driven analyses.\n",
     "\n",
@@ -29,23 +36,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need an instance:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
-    "# initialize a test instance for this notebook\n",
-    "# this should be run before importing lamindb in Python\n",
-    "!lamin login testuser1\n",
-    "!lamin delete mydata\n",
-    "!lamin init --storage ./mydata\n",
-    "!lamin login testuser2\n",
-    "# load testuser1's instance using testuser2\n",
-    "!lamin load testuser1/mydata"
+    "!lamin init --storage ./mydata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import lamindb:"
    ]
   },
   {
@@ -58,27 +79,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll need toy data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
-    "# To make the example of this guide richer, let's create data registered in uploads and pipeline runs by testuser1:\n",
+    "assert ln.setup.settings.user.handle == \"testuser1\"\n",
     "bfx_run_output = ln.dev.datasets.dir_scrnaseq_cellranger(\n",
     "    \"perturbseq\", basedir=ln.settings.storage, output_only=False\n",
     ")\n",
-    "ln.setup.login(\"testuser1\")\n",
-    "transform = ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\")\n",
-    "ln.track(transform)\n",
-    "file1 = ln.File(bfx_run_output.parent / \"fastq/perturbseq_R1_001.fastq.gz\")\n",
-    "file1.save()\n",
-    "file2 = ln.File(bfx_run_output.parent / \"fastq/perturbseq_R2_001.fastq.gz\")\n",
-    "file2.save()\n",
-    "# let's now login testuser2 to start with guide\n",
+    "ln.track(ln.Transform(name=\"Chromium 10x upload\", type=\"pipeline\"))\n",
+    "ln.File(bfx_run_output.parent / \"fastq/perturbseq_R1_001.fastq.gz\").save()\n",
+    "ln.File(bfx_run_output.parent / \"fastq/perturbseq_R2_001.fastq.gz\").save()\n",
     "ln.setup.login(\"testuser2\")"
    ]
   },
@@ -106,31 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\").save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Before running the pipeline, query or search for the corresponding transform record:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transform = ln.Transform.filter(name=\"Cell Ranger\", version=\"7.2.0\").one()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pass the record to {func}`~lamindb.track` to set a global {class}`~lamindb.dev.run_context`:"
+    "transform = ln.Transform(name=\"Cell Ranger\", version=\"7.2.0\", type=\"pipeline\")"
    ]
   },
   {
@@ -147,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's stage (download) a few files from an instrument upload:"
+    "Now, let's stage a few files from an instrument upload:"
    ]
   },
   {
@@ -171,46 +170,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.File.tree(\"./mydata/perturbseq/filtered_feature_bc_matrix/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "output_files = ln.File.from_dir(\"./mydata/perturbseq/filtered_feature_bc_matrix/\")\n",
     "ln.save(output_files)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Each of these files now has transform and run records. For instance:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_files[0].transform"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_files[0].run"
    ]
   },
   {
@@ -233,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And let's keep running the Cell Ranger pipeline in the background:"
+    "And let's keep running the Cell Ranger pipeline in the background."
    ]
   },
   {
@@ -246,12 +214,10 @@
    },
    "outputs": [],
    "source": [
-    "# continue with more precessing steps of the cell ranger output data\n",
     "transform = ln.Transform(\n",
     "    name=\"Preprocess Cell Ranger outputs\", version=\"2.0\", type=\"pipeline\"\n",
     ")\n",
     "ln.track(transform)\n",
-    "\n",
     "[f.stage() for f in output_files]\n",
     "filepath = ln.dev.datasets.schmidt22_perturbseq(basedir=ln.settings.storage)\n",
     "file = ln.File(filepath, description=\"perturbseq counts\")\n",
@@ -324,14 +290,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Track notebooks"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -383,13 +341,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
-    "file.view_lineage()"
+    "## Track notebooks"
    ]
   },
   {
@@ -410,11 +365,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualize data lineage"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's load the image file:"
+    "Let's load one of the plots:"
    ]
   },
   {
@@ -423,6 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "file = ln.File.filter(key__contains=\"figures/matrixplot\").one()\n",
     "file.stage()"
    ]
   },
@@ -447,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also purely look at the sequence of transforms:"
+    "Alternatively, we can also purely look at the sequence of transforms and ignore the files:"
    ]
   },
   {
@@ -482,46 +445,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And if you or another user re-runs a notebook, they'll be informed about parents in the logging:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.track()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data lineage graph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To summarize, let's re-render the data lineage graph:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.view_lineage()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Understand runs"
    ]
   },
@@ -530,11 +453,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Under-the-hood we already tracked pipeline and notebook runs through {class}`~docs:lamindb.dev.run_context`.\n",
+    "We tracked pipeline and notebook runs through {class}`~docs:lamindb.dev.run_context`, which stores a {class}`~docs:lamindb.Transform` and a {class}`~docs:lamindb.Run` record as a global context.\n",
     "\n",
-    "You can see this most easily by looking at the `File.run` attribute (in addition to `File.transform`).\n",
-    "\n",
-    "{class}`~lamindb.File` objects are the inputs and outputs of such runs. "
+    "{class}`~lamindb.File` objects are the inputs and outputs of runs. "
    ]
   },
   {
@@ -542,11 +463,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{dropdown} What if I don't want a global context?\n",
+    "\n",
     "Sometimes, we don't want to create a global run context but manually pass a run when creating a file:\n",
-    "```\n",
+    "```python\n",
     "run = ln.Run(transform=transform)\n",
     "ln.File(filepath, run=run)\n",
-    "```"
+    "```\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -554,29 +479,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{dropdown} When does a file appear as a run input?\n",
+    "\n",
     "When accessing a file via `stage()`, `load()` or `backed()`, two things happen:\n",
     "\n",
     "1. The current run gets added to `file.input_of`\n",
-    "2. The transform of that file gets added as a parent of the current transform"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "While run outputs are _automatically_ tracked as data sources once you call `ln.track()`, you can then still switch off auto-tracking of run inputs if you set `ln.settings.track_run_inputs = False`: {doc}`docs:faq/track-run-inputs`"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "2. The transform of that file gets added as a parent of the current transform\n",
+    "\n",
+    "You can then switch off auto-tracking of run inputs if you set `ln.settings.track_run_inputs = False`: {doc}`docs:faq/track-run-inputs`\n",
+    "\n",
     "You can also track run inputs on a case by case basis via `is_run_input=True`, e.g., here:\n",
-    "```\n",
+    "```python\n",
     "file.load(is_run_input=True)\n",
-    "```"
+    "```\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -670,7 +587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "users = ln.User.lookup(field=\"handle\")"
+    "users = ln.User.lookup()"
    ]
   },
   {
@@ -703,7 +620,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And of course, we can also view all recent additions to the entire database:"
+    "We can also view all recent additions to the entire database:"
    ]
   },
   {
