--- a/docs/birds-eye.ipynb
+++ b/docs/birds-eye.ipynb
@@ -138,6 +138,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.User.filter().df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ln.track(transform)"
    ]
   },
@@ -419,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.search(\"Track data lineage\", return_queryset=True).first()"
+    "transform = ln.Transform.search(\"Bird's eye view\", return_queryset=True).first()"
    ]
   },
   {
