--- a/docs/flow.ipynb
+++ b/docs/flow.ipynb
@@ -58,22 +58,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "filepath = ln.dev.datasets.file_fcs_alpert19()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filepath"
+    "ln.dev.datasets.file_fcs_alpert19()"
    ]
   },
   {
@@ -126,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.var.index = lb.CellMarker.bionty().map_synonyms(adata.var.index)"
+    "adata.var.index = lb.CellMarker.standardize(adata.var.index)"
    ]
   },
   {
@@ -186,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have a clean panel of 45 CellMarkers and metadata that we don't want to register:"
+    "Now we have a clean panel of 35 CellMarkers and metadata that we don't want to register:"
    ]
   },
   {
@@ -252,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata2.var.index = lb.CellMarker.bionty().map_synonyms(adata2.var.index)"
+    "adata2.var.index = lb.CellMarker.standardize(adata2.var.index)"
    ]
   },
   {
