📝 Update notebook titles

--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Curate & link bulk RNA-seq datasets"
+    "# Validate & register bulk RNA-seq datasets"
    ]
   },
   {
