--- a/docs/flow.ipynb
+++ b/docs/flow.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Curate & link flow cytometry data"
+    "# Validate & register flow cytometry data"
    ]
   },
   {
