--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Curate & link spatial data"
+    "# Validate & register spatial data"
    ]
   },
   {
