📝 Updated flow and bulkrna nbs

--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -62,7 +62,9 @@
     "# create a directory for its output\n",
     "Path(\"./test-bulkrna/output_dir\").mkdir(exist_ok=True)\n",
     "# get the count matrix\n",
-    "path = ln.dev.datasets.file_tsv_rnaseq_nfcore_salmon_merged_gene_counts()\n",
+    "path = ln.dev.datasets.file_tsv_rnaseq_nfcore_salmon_merged_gene_counts(\n",
+    "    populate_registries=True\n",
+    ")\n",
     "# move it into the output directory\n",
     "path = path.rename(f\"./test-bulkrna/output_dir/{path.name}\")\n",
     "# register it\n",
@@ -73,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Curate the count matrix"
+    "## Curate the count matrix ![](https://img.shields.io/badge/Transform-10b981)"
    ]
   },
   {
@@ -212,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validate & register the count matrix"
+    "## Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -244,6 +246,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "genes = lb.Gene.from_values(adata.var.index, lb.Gene.stable_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# also register the 2 non-validated genes\n",
+    "ln.save(genes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assays = lb.ExperimentalFactor.lookup()\n",
+    "assays.rna_seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modality = ln.Modality.filter(name=\"rna\").one()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Register ![](https://img.shields.io/badge/Register-10b981)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "curated_file = ln.File.from_anndata(\n",
     "    adata, description=\"Curated bulk RNA counts\", var_ref=lb.Gene.stable_id\n",
     ")"
@@ -263,6 +310,36 @@
    "outputs": [],
    "source": [
     "curated_file.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curated_file.add_labels(assays.rna_seq, \"assay\")\n",
+    "curated_file.add_labels(lb.settings.species, \"species\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_feature_set = curated_file.features.get_feature_set(\"var\")\n",
+    "var_feature_set.modality = modality\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curated_file.describe()"
    ]
   },
   {
@@ -301,7 +378,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's by query by gene: ..."
+    "Let's by query by gene:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lookup object for auto-complete\n",
+    "genes = lb.Gene.lookup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genes.spo7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a feature set containing SPO7 gene and contain RNA measurements\n",
+    "feature_set = ln.FeatureSet.filter(genes=genes.spo7, modality__name=\"rna\").first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# files that link to this feature set\n",
+    "ln.File.filter(feature_sets=feature_set).df()"
    ]
   },
   {
