📝 Updated data type notebooks (#35)

--- a/docs/flow.ipynb
+++ b/docs/flow.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/flow.ipynb)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -13,7 +20,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
@@ -25,9 +32,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -51,6 +56,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
+    "\n",
+    "(Here we skip steps of data transformations, which often includes filtering, normalizing, or formatting data.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We start with a flow cytometry file from Alpert19:"
    ]
   },
@@ -62,7 +76,9 @@
    },
    "outputs": [],
    "source": [
-    "ln.dev.datasets.file_fcs_alpert19()"
+    "ln.dev.datasets.file_fcs_alpert19(\n",
+    "    populate_registries=True,  # pre-populate registries to simulate an used instance\n",
+    ")"
    ]
   },
   {
@@ -84,11 +100,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Track data with cell markers\n",
+    "## Validate ![](https://img.shields.io/badge/Validate-10b981) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's validate the features in `.var`.\n",
     "\n",
     "We'll use the `CellMarker` reference to link features:"
    ]
@@ -99,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(adata, description=\"Alpert19\", var_ref=lb.CellMarker.name)"
+    "lb.CellMarker.validate(adata.var.index, \"name\");"
    ]
   },
   {
@@ -128,36 +150,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(adata, description=\"Alpert19\", var_ref=lb.CellMarker.name)"
+    "validated = lb.CellMarker.validate(adata.var.index, \"name\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hence, let's curate the AnnData a bit more:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validated = lb.CellMarker.bionty().validate(adata.var.index, \"name\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Hence, let's curate the AnnData a bit more.\n",
+    "\n",
     "Let's move metadata (non-validated cell markers) into `adata.obs`:"
    ]
   },
@@ -175,7 +179,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we have a clean panel of 35 CellMarkers and metadata that we don't want to register:"
+    "Now we have a clean panel of 35 cell markers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.CellMarker.validate(adata.var.index, \"name\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, let's register the metadata features we moved to .obs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ln.Feature.from_df(\n",
+    "    adata.obs\n",
+    ")  # Feature.from_df create feature records with type auto-populated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.add(features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition, We'd also like to link this file with external features:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature.validate(\"assay\", \"name\")\n",
+    "lb.ExperimentalFactor.validate(\"FACS\", \"name\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since we never validated the term \"FACS\", let's search for it's ontology and register it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.ExperimentalFactor.bionty().search(\"FACS\").head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "facs = lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0009108\")\n",
+    "facs.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding a new modality:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modality = ln.Modality(name=\"protein\", description=\"readouts of protein abundance\")\n",
+    "modality.save()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Register ![](https://img.shields.io/badge/Register-10b981)"
    ]
   },
   {
@@ -202,7 +310,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "file.add_labels(facs, \"assay\")\n",
+    "file.add_labels(lb.settings.species, \"species\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_feature_set = file.features.get_feature_set(\"var\")\n",
+    "var_feature_set.modality = modality\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file.features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check a few validated cell markers in `.var`:"
    ]
   },
   {
@@ -218,7 +354,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's register another flow file:"
+    "## Validate and register a second dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's validate and register another flow file:"
    ]
   },
   {
@@ -229,10 +372,47 @@
    },
    "outputs": [],
    "source": [
-    "adata2 = readfcs.read(ln.dev.datasets.file_fcs())\n",
-    "file2 = ln.File.from_anndata(\n",
-    "    adata2, description=\"My fcs file\", var_ref=lb.CellMarker.name\n",
-    ")"
+    "adata2 = readfcs.read(ln.dev.datasets.file_fcs())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://img.shields.io/badge/Validate-10b981) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'd like to track all features in `.var`, so we register them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata2.var.index = lb.CellMarker.bionty().standardize(adata2.var.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "markers = lb.CellMarker.from_values(adata2.var.index, \"name\")\n",
+    "ln.save(markers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standardize synonyms so that all features pass validation:"
    ]
   },
   {
@@ -242,6 +422,22 @@
    "outputs": [],
    "source": [
     "adata2.var.index = lb.CellMarker.standardize(adata2.var.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.CellMarker.validate(adata2.var.index, \"name\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://img.shields.io/badge/Register-10b981) "
    ]
   },
   {
@@ -262,6 +458,36 @@
    "outputs": [],
    "source": [
     "file2.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2.add_labels(facs, \"assay\")\n",
+    "file2.add_labels(lb.settings.species, \"species\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_feature_set = file2.features.get_feature_set(\"var\")\n",
+    "var_feature_set.modality = modality\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2.features"
    ]
   },
   {
@@ -337,7 +563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = ln.File.filter(feature_sets__in=panels_with_cd14).list()\n",
+    "files = ln.File.filter(feature_sets__in=panels_with_cd14, species__name=\"human\").list()\n",
     "file1, file2 = files[0], files[1]"
    ]
   },
