💚 Fix Dataset constructor

--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = ln.Dataset.from_files(files=[file_ad, file_img], name=\"Suo22\")\n",
+    "dataset = ln.Dataset([file_ad, file_img], name=\"Suo22\")\n",
     "dataset.save()"
    ]
   },
