💚 Pass feature to add_labels

--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -875,7 +875,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_annotated.add_labels(celltypes)"
+    "file_annotated.add_labels(celltypes, feature=\"cell_type_cell_typist\")"
    ]
   },
   {
