--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -259,7 +259,7 @@
    "source": [
     "gene_targets = lb.Gene.from_values(obs[\"gene_target\"], \"symbol\")\n",
     "ln.save(gene_targets)\n",
-    "file.add_labels(gene_targets)"
+    "file.add_labels(gene_targets, feature=\"gene_target\")"
    ]
   },
   {
