--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -221,9 +221,9 @@
    },
    "outputs": [],
    "source": [
-    "file.add_labels(cell_types)\n",
-    "file.add_labels(tissues)\n",
-    "file.add_labels(diseases)"
+    "file.add_labels(cell_types, feature=\"cell_type\")\n",
+    "file.add_labels(tissues, feature=\"tissue\")\n",
+    "file.add_labels(diseases, feature=\"disease\")"
    ]
   },
   {
@@ -458,9 +458,9 @@
     "tissues = lb.Tissue.from_values(adata.obs.tissue, lb.Tissue.name)\n",
     "diseases = lb.Disease.from_values(adata.obs.disease, lb.Disease.name)\n",
     "\n",
-    "file_subset.add_labels(cell_types)\n",
-    "file_subset.add_labels(tissues)\n",
-    "file_subset.add_labels(diseases)"
+    "file_subset.add_labels(cell_types, feature=\"cell_type\")\n",
+    "file_subset.add_labels(tissues, feature=\"tissue\")\n",
+    "file_subset.add_labels(diseases, diseases=\"disease\")"
    ]
   },
   {
