--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -460,7 +460,7 @@
     "\n",
     "file_subset.add_labels(cell_types, feature=\"cell_type\")\n",
     "file_subset.add_labels(tissues, feature=\"tissue\")\n",
-    "file_subset.add_labels(diseases, diseases=\"disease\")"
+    "file_subset.add_labels(diseases, feature=\"disease\")"
    ]
   },
   {
